# LevEngine

./: .gitignore  .gitmodules  CG-Course.sln  CG-Course.sln.DotSettings  CG-Course.vcxproj  CG-Course.vcxproj.filters  CMakeLists.txt  LICENSE  LevEngine.sln  LevEngine.sln.DotSettings  LevEngineProfile-Runtime.json  LevEngineProfile-Startup.json  MySuper3DApp.cpp  README.md  imgui.ini  main.cpp
LevCore/: CMakeLists.txt  EntryPoint.h  LevEngine.h  pch.h
LevCore/assets/shaders/: Lit.shader  Lit_Color.shader  ShadowMap.shader  Unlit_Color.shader
LevCore/src/Debug/: Instrumentor.h  Profiler.h
LevCore/src/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
LevCore/src/GUI/: ImGuiLayer.cpp  ImGuiLayer.h
LevCore/src/Input/: Input.h  KeyCodes.h  MouseButtonCodes.h
LevCore/src/Kernel/: Application.cpp  Application.h  Asserts.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Logger.cpp  Logger.h  PointerUtils.h  Time.cpp  Time.h  Timestep.cpp  Timestep.h  UUID.cpp  UUID.h  Utils.h  Window.h
LevCore/src/Math/: Math.cpp  Math.h
LevCore/src/Renderer/: Buffer.cpp  Buffer.h  DepthFunc.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  StorageBuffer.cpp  StorageBuffer.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
LevCore/src/Renderer/3D/: Mesh.cpp  Mesh.h  Renderer3D.cpp  Renderer3D.h
LevCore/src/Renderer/Camera/: Camera.cpp  Camera.h  EditorCamera.cpp  EditorCamera.h  OrthographicCamera.cpp  OrthographicCamera.h  SceneCamera.cpp  SceneCamera.h
LevCore/src/Scene/: Component.h  Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
LevCore/src/Utils/: PlatformUtils.h
LevEditor/: CMakeLists.txt  LevEditor.vcxproj  LevEditor.vcxproj.filters  SaveData.editor  imgui.ini
LevEditor/LevResources/Scripts/: Component.lua  System.lua
LevEditor/LevResources/Shaders/: CascadeShadowPass.hlsl  CascadeShadowPassAnimated.hlsl  CubemapConvolution.hlsl  Debug.hlsl  DeferredLightningPass.hlsl  DeferredLightningPassPBR.hlsl  DeferredOpaqueAnimatedPBR.hlsl  DeferredOpaqueAnimatedPBRVertex.hlsl  DeferredOpaquePBR.hlsl  DeferredOpaquePBRPixel.hlsl  DeferredOpaquePBRVertex.hlsl  ForwardPBR.hlsl  ForwardQuadRender.hlsl  GBufferPass.hlsl  Lighting.hlsl  Lightning.hlsl  Lit.hlsl  MaterialPBR.hlsl  MaterialSimple.hlsl  Quad.hlsl  ShaderCommon.hlsl  ShaderCommonAnimated.hlsl  Skybox.hlsl
LevEditor/LevResources/Shaders/DebugRender/: DebugLine.hlsl  DebugShape.hlsl
LevEditor/LevResources/Shaders/Environment/: BRDFIntegration.hlsl  Common.hlsli  CubemapConvolution.hlsl  CubemapRender.hlsl  EquirectangularToCubemap.hlsl  PreFiltering.hlsl  Render.hlsl
LevEditor/LevResources/Shaders/Particles/: BitonicSort.hlsl  (+6 more)
LevEditor/assets/scenes/: FirstScene.letscene
LevEditor/assets/shaders/: Ultimate2D.shader  Unlit_Texture.shader
LevEditor/resources/: Material.mat
LevEditor/resources/FancyTorch/: FancyTorch.mat  FancyTorch.mtl
LevEditor/resources/Scenes/: EmptyScene.scene  Test.scene  TestScene.scene
LevEditor/resources/Shaders/: GBufferPass.hlsl  Lit.hlsl  ShaderCommon.hlsl  ShadowPass.hlsl  Unlit.hlsl
LevEditor/resources/Textures/: CartMaterial.mat  Floor Material.mat
LevEditor/src/: AssetSelection.cpp  AssetSelection.h  EditorCamera.cpp  EditorCamera.h  EditorLayer.cpp  EditorLayer.h  EditorSaveData.cpp  EditorSaveData.h  EntitySelection.cpp  EntitySelection.h  Gizmo.cpp  Gizmo.h  LevEditor.cpp  ModalPopup.cpp  ModalPopup.h  ProjectEditor.cpp  ProjectEditor.h  SceneEditor.cpp  SceneEditor.h  SceneState.h  Selection.cpp  Selection.h  pch.h
LevEditor/src/ComponentDebugRenderers/: AnimatorComponentDebugRenderer.cpp  CharacterControllerDebugRenderer.cpp  ColliderComponentsDebugRenderer.cpp  ComponentDebugRenderer.h  LightComponentsDebugRenderer.cpp  NavMeshBoundingBoxDebugRenderer.cpp  NavMeshDebugRenderer.cpp  RigidbodyDebugRenderer.cpp
LevEditor/src/EditorWindows/: SceneHierarchyEditorWindow.cpp  SceneHierarchyEditorWindow.h
LevEditor/src/Essentials/: MenuBar.cpp  MenuBar.h
LevEditor/src/GUI/: EditorGUI.cpp  EditorGUI.h  EditorGUI.inl  GUIUtils.cpp  GUIUtils.h  ScopedGUIHelpers.h
LevEditor/src/Panels/: AssetBrowserPanel.cpp  AssetBrowserPanel.h  ConsolePanel.cpp  ConsolePanel.h  DockSpace.cpp  DockSpace.h  GamePanel.cpp  GamePanel.h  HierarchyPanel.cpp  HierarchyPanel.h  Panel.cpp  Panel.h  PanelBase.cpp  PanelBase.h  PropertiesPanel.cpp  PropertiesPanel.h  ScriptsPanel.cpp  ScriptsPanel.h  SettingsPanel.cpp  SettingsPanel.h  StatisticsPanel.cpp  StatisticsPanel.h  StatusBar.cpp  StatusBar.h  Toolbar.cpp  Toolbar.h  ViewportPanel.cpp  ViewportPanel.h
(+1249 files in other folders)
